--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -66,6 +66,13 @@
     color: white;
 }
 
+.footer-bottom a {
+  text-decoration: none;
+  color: inherit; 
+  cursor: pointer; 
+  font-weight: bold;
+}
+
 .social-icons {
     display: flex;
     gap: 15px;
